--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.7.9",
     "gsap": "^3.12.7",
     "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-apexcharts": "^1.7.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
