--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.7",
     "react": "^19.0.0",
     "react-alice-carousel": "^2.9.1",
     "react-apexcharts": "^1.7.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
