--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.1",
     "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
@@ -48,6 +48,10 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^8.17.1"
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "ajv": "^8.17.1",
+    "babel-loader": "^9.2.1",
+    "html-webpack-plugin": "^5.6.3",
+    "source-map-loader": "^5.0.0"
   }
 }
