--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.7",
+    "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-alice-carousel": "^2.9.1",
     "react-apexcharts": "^1.7.0",
