--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.9.4",
     "@react-spring/web": "^9.7.5",
     "@tanstack/react-query": "^5.65.1",
     "@testing-library/jest-dom": "^5.17.0",
